Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -53,6 +53,12 @@ All of these features are required to provide the helpful tool.  </p>
 
 <p>You also need commonly to parse EDL, AAF files.<br>
 Find here some references to parsers:<br><a href="https://github.com/DIT-Tools/python-edl">Python EDL Parser</a><br><a href="https://github.com/DIT-Tools/pyaaf">Python binding for AAF</a><br><a href="https://github.com/DIT-Tools/genericEDL">an EDL parser and editor</a>  </p>
+
+<h3>
+<a name="authors" class="anchor" href="#authors"><span class="octicon octicon-link"></span></a>Authors</h3>
+
+<p>Initialy created by<br><a href="http://marcantoine-arnaud.github.io/">Marc-Antoine ARNAUD</a> - <a href="http://www.mikrosimage.eu/">Mikros Image</a><br>
+Guillaume BOSSU - <a href="http://www.studio-equipe.fr/">Studio l'Equipe</a>  </p>
       </section>
       <footer>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="http://twitter.com/#!/michigangraham">mattgraham</a></small></p>
